--- a/views/package.json
+++ b/views/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.16.1",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
+    "build-css": "^0.2.0",
     "chance": "^1.0.18",
     "classnames": "^2.2.6",
     "cldr": "^4.13.0",
